--- a/_config.yml
+++ b/_config.yml
@@ -6,10 +6,10 @@ ios_app_id                                : 1511197431                          
 
 appstore_link                             :                                           # Automatically populates if not set and if iOS app ID is set. Otherwise enter manually.
 playstore_link                            :                                           # Enter Google Play Store URL.
-presskit_download_link                    : assets/presskit.zip                 # Enter a link to downloadable file or (e.g. public Dropbox link to a .zip file). 
+presskit_download_link                    : /assets/presskit.zip                 # Enter a link to downloadable file or (e.g. public Dropbox link to a .zip file). 
                                                                                       # Or upload your press kit file to assets and set path accordingly (e.g. "assets/your_press_kit.zip").
 
-app_icon                                  : assets/appicon.png                        # Automatically populates if not set and if iOS app ID is set.  Otherwise enter path to icon file manually.
+app_icon                                  : /assets/appicon.png                        # Automatically populates if not set and if iOS app ID is set.  Otherwise enter path to icon file manually.
 app_name                                  : Oh Bother                                 # Automatically populates if not set and if iOS app ID is set.  Otherwise enter manually.
 app_price                                 :                                           # Automatically populates if not set and if iOS app ID is set.  Otherwise enter manually.
 app_description                           : Work from home in peace. A tiny app for iPhone.
@@ -21,7 +21,7 @@ enable_smart_app_banner                   : true                                
 # Information About Yourself
 your_name                                 : Daniel Gauthier                                
 your_link                                 : https://danielgauthier.me                     
-your_city                                 : Ottawa                                
+your_city                                 : Ottawa 🇨🇦                                
 email_address                             : danielgauthier.dev@gmail.com
 facebook_username                         :                                           
 instagram_username                        : 
