--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 #page title
-page_title                                : Oh Bother                                  # Automatically populates with app name if not set and if iOS app ID is set. Otherwise enter manually.
+page_title                                : Drinksly                                  # Automatically populates with app name if not set and if iOS app ID is set. Otherwise enter manually.
 
 # App Info
 ios_app_id                                : 1524569359                                # Required. Enter iOS app ID to automatically populate name, price and icons (e.g. 718043190).
@@ -10,7 +10,7 @@ presskit_download_link                    : /assets/presskit.zip                
                                                                                       # Or upload your press kit file to assets and set path accordingly (e.g. "assets/your_press_kit.zip").
 
 app_icon                                  : /assets/appicon.png                        # Automatically populates if not set and if iOS app ID is set.  Otherwise enter path to icon file manually.
-app_name                                  : Oh Bother                                 # Automatically populates if not set and if iOS app ID is set.  Otherwise enter manually.
+app_name                                  : Drinksly                                 # Automatically populates if not set and if iOS app ID is set.  Otherwise enter manually.
 app_price                                 :                                           # Automatically populates if not set and if iOS app ID is set.  Otherwise enter manually.
 app_description                           : Work from home in peace. A tiny app for iPhone.
 
@@ -19,14 +19,14 @@ enable_smart_app_banner                   : true                                
 
 
 # Information About Yourself
-your_name                                 : Daniel Gauthier                                
-your_link                                 : https://danielgauthier.me                     
-your_city                                 : Ottawa 🇨🇦                                
-email_address                             : danielgauthier.dev@gmail.com
+your_name                                 : Yon Montoto                                
+your_link                                 :                      
+your_city                                 : USA                                
+email_address                             : yon.montoto@gmail.com
 facebook_username                         :                                           
 instagram_username                        : 
-twitter_username                          : danielmgauthier
-github_username                           : danielmgauthier
+twitter_username                          : yonodactyl
+github_username                           : yonodactyl
 youtube_username                          :
 
 
@@ -34,16 +34,16 @@ youtube_username                          :
 # Feature List                            Edit, add or remove features to be presented.
 features                                  :
 
-  - title                                 : Don't get bothered.
-    description                           : With a few taps, let your housemates know whether or not you're botherable, give them some context, and put it on a timer to keep yourself on track.
+  - title                                 : Discover.
+    description                           : Discover your next go-to drink without the need to experiment. I have tried them all for you!
     fontawesome_icon_name                 : comment-slash
     
-  - title                                 : Don't bother others.
-    description                           : View the status of your housemates at a glance, and catch them as soon as they're free by getting notified when statuses change.
+  - title                                 : Favorite.
+    description                           : When you find your favorite drink save it for later viewing. No need for blurry photos you found on the internet.
     fontawesome_icon_name                 : bell
 
-  - title                                 : Do it all in style.
-    description                           : Oh Bother is designed from the ground up to feel playful and unique without throwing out what makes iOS great. Even the simplest apps can and should be a joy to use!
+  - title                                 : Order.
+    description                           : Each drink comes with the exact directions to order it. No more anxiety when the barista ask what you want!
     fontawesome_icon_name                 : palette
 
   - title                                 : # New Feature Title
@@ -53,7 +53,7 @@ features                                  :
 
 
 # Theme Settings
-topbar_color                              : "#000000"
+topbar_color                              : "#FF2D55"
 topbar_transparency                       : 0.1
 topbar_title_color                        : "#ffffff"
 
