--- a/_config.yml
+++ b/_config.yml
@@ -6,13 +6,13 @@ ios_app_id                                : 1524569359                          
 
 appstore_link                             :                                           # Automatically populates if not set and if iOS app ID is set. Otherwise enter manually.
 playstore_link                            :                                           # Enter Google Play Store URL.
-presskit_download_link                    : /assets/presskit.zip                 # Enter a link to downloadable file or (e.g. public Dropbox link to a .zip file). 
+presskit_download_link                    :                  # Enter a link to downloadable file or (e.g. public Dropbox link to a .zip file). 
                                                                                       # Or upload your press kit file to assets and set path accordingly (e.g. "assets/your_press_kit.zip").
 
 app_icon                                  : /assets/appicon.png                        # Automatically populates if not set and if iOS app ID is set.  Otherwise enter path to icon file manually.
 app_name                                  : Drinksly                                 # Automatically populates if not set and if iOS app ID is set.  Otherwise enter manually.
 app_price                                 :                                           # Automatically populates if not set and if iOS app ID is set.  Otherwise enter manually.
-app_description                           : Work from home in peace. A tiny app for iPhone.
+app_description                           : A secret menu companion.
 
 enable_smart_app_banner                   : true                                      # Set to true to show a smart app banner at top of page on mobile devices.
 
@@ -58,7 +58,7 @@ topbar_transparency                       : 0.1
 topbar_title_color                        : "#ffffff"
 
 cover_image                               : assets/ArtboardWebBlur.png                    # Replace with alternative image path or image URL.
-cover_overlay_color                       : "#4379D3"
+cover_overlay_color                       : "#FF2D55"
 cover_overlay_transparency                : 0.85
 
 device_color                              : black                                     # Set to: blue, black, yellow, coral or white.
