--- a/_config.yml
+++ b/_config.yml
@@ -57,7 +57,7 @@ topbar_color                              : "#FF2D55"
 topbar_transparency                       : 0.1
 topbar_title_color                        : "#ffffff"
 
-cover_image                               : assets/ArtboardWebBlur.png                    # Replace with alternative image path or image URL.
+cover_image                               : assets/drinkslybackdrop.png                    # Replace with alternative image path or image URL.
 cover_overlay_color                       : "#FF2D55"
 cover_overlay_transparency                : 0.85
 
