--- a/_config.yml
+++ b/_config.yml
@@ -53,12 +53,12 @@ features                                  :
 
 
 # Theme Settings
-topbar_color                              : "#FF2D55"
-topbar_transparency                       : 0.1
+topbar_color                              : "#F1F1F1"
+topbar_transparency                       : 0.3
 topbar_title_color                        : "#ffffff"
 
 cover_image                               : assets/drinkslybackdrop.png                    # Replace with alternative image path or image URL.
-cover_overlay_color                       : "#FF2D55"
+cover_overlay_color                       : "#F1F1F1"
 cover_overlay_transparency                : 0.85
 
 device_color                              : black                                     # Set to: blue, black, yellow, coral or white.
