--- a/_config.yml
+++ b/_config.yml
@@ -53,13 +53,13 @@ features                                  :
 
 
 # Theme Settings
-topbar_color                              : "#F1F1F1"
+topbar_color                              : "#FF2D55"
 topbar_transparency                       : 0.2
-topbar_title_color                        : "#323232"
+topbar_title_color                        : "#ffffff"
 
 cover_image                               : assets/drinkslybackdrop.png                    # Replace with alternative image path or image URL.
-cover_overlay_color                       : "#F1F1F1"
-cover_overlay_transparency                : 0.5
+cover_overlay_color                       : "#FF2D55"
+cover_overlay_transparency                : 0.65
 
 device_color                              : black                                     # Set to: blue, black, yellow, coral or white.
 
@@ -67,9 +67,9 @@ body_background_color                     : "#f1f1f1"
 
 link_color                                : "#FF2D55"
 
-app_title_color                           : "#323232"
-app_price_color                           : "#323232"
-app_description_color                     : "#666666"
+app_title_color                           : "#ffffff"
+app_price_color                           : "#ffffff"
+app_description_color                     : "#ffffff"
 
 feature_title_color                       : "#323232"
 feature_text_color                        : "#666666"
