--- a/_config.yml
+++ b/_config.yml
@@ -21,10 +21,10 @@ enable_smart_app_banner                   : true                                
 # Information About Yourself
 your_name                                 : Yon Montoto                                
 your_link                                 : https://github.com/Yonodactyl/iOS-Portfolio                     
-your_city                                 : Orlando                                
+your_city                                 : Orlando, Florida                                
 email_address                             : yon.montoto@gmail.com
 facebook_username                         :                                           
-instagram_username                        : 
+instagram_username                        : drinkslyapp
 twitter_username                          : yonodactyl
 github_username                           : yonodactyl
 youtube_username                          :
@@ -54,12 +54,12 @@ features                                  :
 
 # Theme Settings
 topbar_color                              : "#FF2D55"
-topbar_transparency                       : 0.15
+topbar_transparency                       : 0.18
 topbar_title_color                        : "#ffffff"
 
 cover_image                               : assets/drinkslybackdrop.png                    # Replace with alternative image path or image URL.
 cover_overlay_color                       : "#FF2D55"
-cover_overlay_transparency                : 0.85
+cover_overlay_transparency                : 0.83
 
 device_color                              : black                                     # Set to: blue, black, yellow, coral or white.
 
