--- a/_config.yml
+++ b/_config.yml
@@ -49,17 +49,17 @@ features                                  :
 
 
 # Theme Settings
-topbar_color                              : "#FF2D55"
+topbar_color                              : "#FBFBFB"
 topbar_transparency                       : 0.2
-topbar_title_color                        : "#ffffff"
+topbar_title_color                        : "#323232"
 
 cover_image                               : assets/drinkslybackdrop.png                    # Replace with alternative image path or image URL.
-cover_overlay_color                       : "#FF2D55"
+cover_overlay_color                       : "#FBFBFB"
 cover_overlay_transparency                : 0.85
 
 device_color                              : black                                     # Set to: blue, black, yellow, coral or white.
 
-body_background_color                     : "#f1f1f1"
+body_background_color                     : "#FBFBFB"
 
 link_color                                : "#FF2D55"
 
