--- a/_config.yml
+++ b/_config.yml
@@ -55,7 +55,7 @@ topbar_title_color                        : "#323232"
 
 cover_image                               : assets/drinkslybackdrop.png                    # Replace with alternative image path or image URL.
 cover_overlay_color                       : "#FBFBFB"
-cover_overlay_transparency                : 0.85
+cover_overlay_transparency                : 0.8
 
 device_color                              : black                                     # Set to: blue, black, yellow, coral or white.
 
@@ -63,9 +63,9 @@ body_background_color                     : "#FBFBFB"
 
 link_color                                : "#FF2D55"
 
-app_title_color                           : "#ffffff"
-app_price_color                           : "#ffffff"
-app_description_color                     : "#ffffff"
+app_title_color                           : "#323232"
+app_price_color                           : "#323232"
+app_description_color                     : "#323232"
 
 feature_title_color                       : "#323232"
 feature_text_color                        : "#666666"
