--- a/_config.yml
+++ b/_config.yml
@@ -53,9 +53,9 @@ topbar_color                              : "#FBFBFB"
 topbar_transparency                       : 0.2
 topbar_title_color                        : "#323232"
 
-cover_image                               : assets/drinkslybackdrop.png                    # Replace with alternative image path or image URL.
-cover_overlay_color                       : "#FBFBFB"
-cover_overlay_transparency                : 0.8
+cover_image                               :                     # Replace with alternative image path or image URL.
+cover_overlay_color                       : 
+cover_overlay_transparency                : 
 
 device_color                              : black                                     # Set to: blue, black, yellow, coral or white.
 
