--- a/_config.yml
+++ b/_config.yml
@@ -54,7 +54,7 @@ topbar_transparency                       : 0.2
 topbar_title_color                        : "#323232"
 
 # cover_image                               :                     # Replace with alternative image path or image URL.
-cover_overlay_color                       : "FBFBFB"
+cover_overlay_color                       : "#FBFBFB"
 cover_overlay_transparency                : 1.0
 
 device_color                              : black                                     # Set to: blue, black, yellow, coral or white.
